[package]
name = "grenad"
description = "Tools to sort, merge, write, and read immutable key-value pairs."
version = "0.4.6"
authors = ["Kerollmops <clement@meilisearch.com>"]
repository = "https://github.com/meilisearch/grenad"
documentation = "https://docs.rs/grenad"
edition = "2018"
license = "MIT"

[dependencies]
bytemuck = { version = "1.7.0", features = ["derive"] }
byteorder = "1.3.4"
flate2 = { version = "1.0", optional = true }
lz4_flex = { version = "0.11.1", optional = true }
rayon = { version = "1.7.0", optional = true }
snap = { version = "1.0.5", optional = true }
tempfile = { version = "3.2.0", optional = true }
zstd = { version = "0.13.0", optional = true }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
quickcheck = "0.9"
rand = "0.8.4"
grenad-0-4 = { version = "0.4.1", package = "grenad" }

[[bench]]
name = "index-levels"
harness = false

[features]
default = ["tempfile", "snappy"]
snappy = ["snap"]
zlib = ["flate2"]
lz4 = ["lz4_flex"]
